[Fix] Align the name and other sections

--- a/CV_Using_HTML_CSS/style.css
+++ b/CV_Using_HTML_CSS/style.css
@@ -131,6 +131,7 @@ body {
 
 .name-role {
   margin-top: 60px;
+  margin-left: 10px;
 }
 
 #name {
